--- a/PortfolioBuilder/templates/navbar.html
+++ b/PortfolioBuilder/templates/navbar.html
@@ -16,12 +16,9 @@
       </ul>
       <form class="d-flex">
         
-        <button type="button" class="btn btn-primary btn-sm mx-3">Sign up</button>
+        <a href="{%url 'account_signup' %}"><button type="button" class="btn btn-primary btn-sm mx-3">Sign up</button></a>
 
-        <button type="button" class="btn btn-primary btn-sm">Register</button>
-
-
-        
+        <a href="{%url 'account_login' %}"><button type="button" class="btn btn-primary btn-sm">Sign in</button></a>
 
       </form>
     </div>
