--- a/PortfolioBuilder/templates/base.html
+++ b/PortfolioBuilder/templates/base.html
@@ -15,6 +15,23 @@
   </head>
   <body>
     {%include 'navbar.html' %}
+    <div class="container mt-3 mb-4">
+    {% if messages %}
+    {% for message in messages %}
+    {% comment %} <div class="alert alert-success alert-dismissible">
+    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+    <strong>{{ message }}</strong> . {% endcomment %}
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      <strong>{{message}}</strong>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+
+
+    {% endfor %}
+
+{% endif %}
+
+</div>
   
     {%block content%}
     
