--- a/PortfolioBuilder/templates/home.html
+++ b/PortfolioBuilder/templates/home.html
@@ -17,8 +17,11 @@ Home
 
             
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus sapien eget nisi malesuada sodales. Fusce ac felis ipsum. Duis at ante neque. Vivamus ut diam vel ex tristique congue ut a mauris.</p>
+            {% if user.is_authenticated %}
             <a href="{%url 'Home:get_details_form' %}"><button type="button" class="btn btn-primary btn-lg">Get started</button></a>
-
+            {% else %}
+            <a href="{%url 'account_signup' %}"><button type="button" class="btn btn-primary btn-lg">Get started</button></a>
+            {% endif %}
           </div>
           <div class="col-md-6">
             <img src="{%static 'img1.png' %}" alt="Image" class="img-fluid">
