--- a/PortfolioBuilder/templates/navbar.html
+++ b/PortfolioBuilder/templates/navbar.html
@@ -9,17 +9,31 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        
+      <!-- TESTING -->
+      {% if user.is_authenticated %}
+      <a class="navbar-brand" href="{% url 'Home:home' %}"><b>Hi, {{user.get_username}}</b></a>
+      {% else %}
+      <a class="navbar-brand" href="{% url 'Home:home' %}">Home</a>
+      {% endif %}
       </ul>
       <form class="d-flex">
+        {% if user.is_authenticated %}
+
+      <li class="nav">
+        <!-- <a class="btn btn-outline-light" href="{% url 'account_logout' %}">Logout</a> -->
+         <a href="{% url 'account_logout' %}" class="btn btn-primary btn-sm mx-3">Log out</a> 
+        {% comment %} <a href="{%url 'account_logout' %}"><button class="btn btn-primary btn-sm mx-3">Log out</button></a> {% endcomment %}
+      </li>
+      <li class="nav">
+        <!-- <a class="btn btn-outline-light" href="{% url 'account_change_password' %}">Password change</a> -->
+        <a href="{%url 'account_change_password' %}"><button type="button" class="btn btn-primary btn-sm mx-3">Change password</button></a>
+      </li>
+      {% else %}
         
         <a href="{%url 'account_signup' %}"><button type="button" class="btn btn-primary btn-sm mx-3">Sign up</button></a>
 
         <a href="{%url 'account_login' %}"><button type="button" class="btn btn-primary btn-sm">Sign in</button></a>
-
+        {% endif %}
       </form>
     </div>
   </div>
