--- a/PortfolioBuilder/static/home.css
+++ b/PortfolioBuilder/static/home.css
@@ -70,3 +70,41 @@ img {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     padding: 20px;
 }
+
+/* Add responsive styles for small screens */
+@media only screen and (max-width: 767px) {
+  body {
+    zoom: 100%;
+    padding-right: 0;
+  }
+
+  h2 {
+    font-size: 2rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
+  .btn-primary {
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
+  }
+  
+  .form {
+    box-shadow: none;
+    padding: 10px;
+  }
+}
+.profile-pic-container {
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-pic-container img {
+  max-width: 75%;
+  max-height: 85%;
+  object-fit: contain;
+}
