--- a/PortfolioBuilder/templates/details_page.html
+++ b/PortfolioBuilder/templates/details_page.html
@@ -16,7 +16,8 @@
         <div class="profile-pic-container">
             <img src="{{ details_page.profile_picture.url }}" alt="Profile Picture">
           </div>
-        <form class="user-form">
+          <form  class="user-form"method="POST" class="form" enctype="multipart/form-data">
+            {%csrf_token%}
           <div class="form-group">
             <label for="name">Name:</label>
             <input type="text" class="form-control" id="name" value="{{ details_page.name }}" readonly>
@@ -42,12 +43,13 @@
             <textarea class="form-control" id="about" rows="5" readonly>{{ details_page.about }}</textarea>
           </div>          
           <div class="form-group d-flex justify-content-center my-2"style="margin-top: 20px;margin-bottom:20px;">
-            <a href="{% url 'Home:get_details_form' %}">
-              <button type="button" class="btn btn-primary mx-2 my-1">Change details</button>
+            <a href="{% url 'Home:change_info' details_page.slug %}" class="btn btn-primary mr-2 mx-2">
+              Change details
             </a>
-            <a href="{% url 'Home:add_skills_form' %}">
-              <button type="button" class="btn btn-primary mx-2 my-1">Save and Continue</button>
+            <a href="{% url 'Home:add_skills_form' %}" class="btn btn-primary">
+              Save and Continue
             </a>
+            
           </div>
         </form>
       </div>
