--- a/PortfolioBuilder/templates/account/login.html
+++ b/PortfolioBuilder/templates/account/login.html
@@ -1,4 +1,44 @@
 {% extends 'base.html' %}
+{% load socialaccount %}
+
+{% load crispy_forms_tags %}
+{% load static %}
+
+{% block content %}
+    <div class="container">
+        <link rel="stylesheet" href="{% static 'home.css' %}">
+        <div class="row">
+            <div class="col-md-6 offset-md-3 mt-0x"> <!-- Increase the margin-top value to move the form up -->
+                <div style="box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); padding: 20px;">
+                    <h1 class="text-2xl my-4">Sign up</h1>
+                    <form method="POST">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <div class="text-center">
+                            <div class="d-grid gap-2 col-6 mx-auto">
+                                <button type="submit" class="btn btn-sign">Sign in</button>
+                            </div>
+                            <div class="or-divider my-3">
+                                <span class="or-text">or</span>
+                            </div>
+                            <a href="{% provider_login_url 'google' %}" class="btn btn-google">
+                                <img src="{% static 'google_logo.png' %}" alt="Google Logo" class="btn-google-icon">
+                                Sign in with Google
+                            </a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock content %}
+
+
+
+
+
+{% comment %} {% extends 'base.html' %}
+{% load socialaccount %}
 
 {% load crispy_forms_tags %}
 {% load static %}
@@ -15,6 +55,8 @@
                         {{ form|crispy }}
                         <button type="submit" class="btn btn-primary">Sign up</button>
                     </form>
+                    <a href="{% provider_login_url 'google' %}">Sign in with Google</a>
+
                     <p class="py-4">Don't have an account? <a class="text-blue-500 underline" href="{% url 'account_signup' %}">Sign up here.</a></p>
                 </div>
             </div>
@@ -23,4 +65,4 @@
             </div>
         </div>
     </div>
-{% endblock content %}
+{% endblock content %} {% endcomment %}
