--- a/PortfolioBuilder/templates/account/signup.html
+++ b/PortfolioBuilder/templates/account/signup.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load socialaccount %}
 
 {% load crispy_forms_tags %}
 {% load static %}
@@ -7,19 +8,26 @@
     <div class="container">
         <link rel="stylesheet" href="{% static 'home.css' %}">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 offset-md-3 mt-0x"> <!-- Increase the margin-top value to move the form up -->
                 <div style="box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); padding: 20px;">
                     <h1 class="text-2xl my-4">Sign up</h1>
                     <form method="POST">
                         {% csrf_token %}
                         {{ form|crispy }}
-                        <button type="submit" class="btn btn-primary">Sign up</button>
+                        <div class="text-center">
+                            <div class="d-grid gap-2 col-6 mx-auto">
+                                <button type="submit" class="btn btn-sign">Sign up</button>
+                            </div>
+                            <div class="or-divider my-3">
+                                <span class="or-text">or</span>
+                            </div>
+                            <a href="{% provider_login_url 'google' %}" class="btn btn-google">
+                                <img src="{% static 'google_logo.png' %}" alt="Google Logo" class="btn-google-icon">
+                                Sign up with Google
+                            </a>
+                        </div>
                     </form>
-                    <p class="py-4">Already have an account? <a class="text-blue-500 underline" href="{% url 'account_login' %}">Sign in here.</a></p>
                 </div>
-            </div>
-            <div class="col-md-6">
-                <img src="{% static 'img4.png' %}" class="img-fluid mt-5">
             </div>
         </div>
     </div>
