--- a/PortfolioBuilder/templates/account/signup.html
+++ b/PortfolioBuilder/templates/account/signup.html
@@ -16,7 +16,7 @@
                         {{ form|crispy }}
                         <div class="text-center">
                             <div class="d-grid gap-2 col-6 mx-auto">
-                                <button type="submit" class="btn btn-sign">Sign up</button>
+                                <button type="submit" class="btn btn-signup">Sign up</button>
                             </div>
                             <div class="or-divider my-3">
                                 <span class="or-text">or</span>
