--- a/PortfolioBuilder/templates/details_page.html
+++ b/PortfolioBuilder/templates/details_page.html
@@ -46,7 +46,7 @@
             <a href="{% url 'Home:change_info' details_page.slug %}" class="btn btn-primary mr-2 mx-2">
               Change details
             </a>
-            <a href="{% url 'Home:add_skills_form' %}" class="btn btn-primary">
+            <a href="{% url 'Home:add_skills_form' details_page.slug%}" class="btn btn-primary">
               Save and Continue
             </a>
             
