--- a/PortfolioBuilder/templates/skill_details.html
+++ b/PortfolioBuilder/templates/skill_details.html
@@ -65,5 +65,6 @@ Skills Details
     </table>
 
     <a href="{% url 'Home:add_skills_form' slug %}" class="button btn-primary">Add More Skills</a>
+    <a href="{% url 'Home:add_education_form' slug %}" class="button btn-primary">Add education</a>
 </div>
 {% endblock %}
