--- a/PortfolioBuilder/templates/education_details.html
+++ b/PortfolioBuilder/templates/education_details.html
@@ -1,48 +1,68 @@
 {% extends 'base.html' %}
 {%load static%}
+{% block title %}
+Skills Details
+{% endblock %}
 
 {% block content %}
-
 <link rel="stylesheet"href="{% static 'home.css' %}"></link>
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <h2>Your education details</h2>
-            <p>Please review the details below:</p>
-            <table class="table">
-                <tbody>
-                    <tr>
-                        <th>First Name:</th>
-                        <td>John</td>
-                    </tr>
-                    <tr>
-                        <th>Last Name:</th>
-                        <td>Doe</td>
-                    </tr>
-                    <tr>
-                        <th>Email:</th>
-                        <td>john.doe@example.com</td>
-                    </tr>
-                    <tr>
-                        <th>Mobile No:</th>
-                        <td>1234567890</td>
-                    </tr>
-                    <tr>
-                        <th>Place:</th>
-                        <td>New York</td>
-                    </tr>
-                    
-                </tbody>
-            </table>
-            <a href="{%url 'Home:add_education_form'%}"><button type="button" class="btn btn-primary mx-2">Add more education</button></a>
-            <a href="{%url 'Home:add_expertise_form'%}"><button type="button" class="btn btn-primary">Save and continue</button></a>
-          
-        </div>
-    </div>
+<div class="container mb-3" style="margin-top: 50px;">
+    <div class="container text-center"><strong>Your education details</strong></div><br>
+
+    <table class="table table-bordered table-hover custom-table">
+        <tr>
+            <th>Education</th>
+            <th>Course Name</th>
+        </tr>
+        
+        {% for education in education_details %}
+        <tr>
+            <td>{{ education.board_or_univ }}</td>
+            <td>
+            {{ education.board_or_univ }}
+            </td>
+        </tr>
+        
+        {% comment %} <tr>
+            <td>{{ detail.skill2 }}</td>
+            <td>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: {{ detail.percent2 }}%;" aria-valuenow="{{ detail.percent2 }}" aria-valuemin="0" aria-valuemax="100">{{ detail.percent2 }}%</div>
+                </div>
+            </td>
+        </tr>
+        
+        <tr>
+            <td>{{ detail.skill3 }}</td>
+            <td>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: {{ detail.percent3 }}%;" aria-valuenow="{{ detail.percent3 }}" aria-valuemin="0" aria-valuemax="100">{{ detail.percent3 }}%</div>
+                </div>
+            </td>
+        </tr>
+        
+        <tr>
+            <td>{{ detail.skill4 }}</td>
+            <td>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: {{ detail.percent4 }}%;" aria-valuenow="{{ detail.percent4 }}" aria-valuemin="0" aria-valuemax="100">{{ detail.percent4 }}%</div>
+                </div>
+            </td>
+        </tr>
+        
+        <tr>
+            <td>{{ detail.skill5 }}</td>
+            <td>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: {{ detail.percent5 }}%;" aria-valuenow="{{ detail.percent5 }}" aria-valuemin="0" aria-valuemax="100">{{ detail.percent5 }}%</div>
+                </div>
+            </td>
+        </tr>  {% endcomment %}
+        {% endfor %}
+    </table>
+
+    <a href="{% url 'Home:add_skills_form' slug %}" class="button btn-primary">Add More education</a>
+    <a href="{% url 'Home:add_education_form' slug %}" class="button btn-primary">Add experience</a>
 </div>
-  
-
-
-
 {% endblock %}
