--- a/PortfolioBuilder/templates/home.html
+++ b/PortfolioBuilder/templates/home.html
@@ -6,9 +6,6 @@ Home
 {%block content%}
 <div class="clearfix">
     <link rel="stylesheet"href="{% static 'home.css' %}"></link>
-
-   
-  
     <div class="container">
         <div class="row">
           <div class="col-md-6">
@@ -18,7 +15,7 @@ Home
             
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus sapien eget nisi malesuada sodales. Fusce ac felis ipsum. Duis at ante neque. Vivamus ut diam vel ex tristique congue ut a mauris.</p>
             {% if user.is_authenticated %}
-            <a href="{%url 'Home:get_details_form' %}"><button type="button" class="btn btn-primary btn-lg">Get started</button></a>
+            <a href="{%url 'Home:get_details_form' %}"><button type="button" class="btn btn-primary btn-lg">Get started for free</button></a>
             {% else %}
             <a href="{%url 'account_signup' %}"><button type="button" class="btn btn-primary btn-lg">Get started</button></a>
             {% endif %}
